Fixed logo not showing up on mobile.

--- a/source/_partials/ui/navbar.html
+++ b/source/_partials/ui/navbar.html
@@ -10,7 +10,7 @@
 		<!-- CELL -->
 		<div class="top-bar-left">
 
-			<a href="/" class="logo hide-mobile">
+			<a href="/" class="logo">
 
 				{{> logo}}
 
