--- a/source/_pages/index.html
+++ b/source/_pages/index.html
@@ -323,7 +323,7 @@ dialog: dialog/
 	<!-- CELL -->
 	<div class="cell padding-md padding-lr-none-tablet padding-tb-lg-mobile padding-lr-none-mobile">
 
-		<iframe title="--name Directions and Location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.941088443794!2d-117.21974828398649!3d32.873278086376715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc072bd2b438eb%3A0x2789d1ff074194d5!2sUmansky+Medical+Center+for+Plastic+Surgery!5e0!3m2!1sen!2sus!4v1545946055190" frameborder="0" class="width-100 height-xs height-75-mobile lazy" style="border:0" allowfullscreen></iframe>
+		<iframe title="--name Directions and Location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.941088443794!2d-117.21974828398649!3d32.873278086376715!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc072bd2b438eb%3A0x2789d1ff074194d5!2sUmansky+Medical+Center+for+Plastic+Surgery!5e0!3m2!1sen!2sus!4v1545946055190" class="width-100 height-xs height-75-mobile lazy" allowfullscreen></iframe>
 
 	</div>
 	<!-- // CELL -->
@@ -402,7 +402,7 @@ dialog: dialog/
 			<!-- CELL -->
 			<div class="cell form-element-container">
 
-				<input type="text" name="number" min="7" max="8" placeholder="7025557777" aria-label="Phone number" required>
+				<input type="number" name="number" min="7" max="8" placeholder="7025557777" aria-label="Phone number" required>
 
 			</div>
 			<!-- // CELL -->
